fix bugs and clean up IonType / IonIdentity APIs
- IonType.addToFormula: apply parts to the cloned result instead of
  mutating the caller's input formula
- IonIdentity: add equals/hashCode based on IonType so List.remove and
  collection operations work as expected
- IonIdentity: synchronize removeMolFormula and clearMolFormulas for
  consistency with the other mutators; return an unmodifiable list from
  getMolFormulas so callers cannot bypass synchronization
- IonIdentity: deprecate getLikelyhood in favor of getScore, update
  IonNetworkLogic caller, drop the unused isDeleted field and the
  redundant getName accessor
- IonIdentity: compareTo delegates to IonType.compareTo (aligned with
  equals)
- IonType: implement Comparable, add streamAll, isPositive, isNegative
- IonType: drop spurious @JsonIgnoreProperties and @JsonIgnore (JSON
  round-trips use the StorableIonLibrary DTO)
- IonType: simplify equals/hashCode to parts + molecules (name,
  totalMass, totalCharge are derived)
- IonType: DEFAULT_ION_ADDUCT_SORTER uses comparingInt for charge
- IonParts: remove unused com.sun.xml.bind.v2.TODO import
- add tests for addToFormula non-mutation, merge silent-charge
  deduplication, and IonIdentity equality / list removal

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>